style(scopeTree): fix wrapping

--- a/panel/components/scope-tree/scope-tree.css
+++ b/panel/components/scope-tree/scope-tree.css
@@ -117,6 +117,9 @@
 }
 
 /* */
+bat-scope-tree {
+  white-space: nowrap;
+}
 
 /*
 bat-scope-tree .selected {
